--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
       "web"
     ]
   },
-  "devDependencies": {
-    "@redwoodjs/core": "^0.8.0",
+  "dependencies": {
+    "@redwoodjs/core": "0.7.0-rc.3",
     "netlify-plugin-prisma-provider": "^0.3.0"
   },
   "eslintConfig": {
